--- a/index.scss
+++ b/index.scss
@@ -1,12 +1,34 @@
 @import 'base';
-
+body {
+    color: white;
+}
 .container {
     display: grid;
+    grid-template-areas:
+        "header header header"
+        "menu content chat"
+        ;
+    grid-template-rows: 80px 1fr;
+    grid-template-columns: 12% 1fr 20%;
     min-height: 100vh; 
-    background-color: gray;
     div {
-        width: 100px;
-        height: 100px;
-        border: 1px solid black;
+        border: 1px dotted red;
+    }
+    .header {
+        background-color: $header-color;
+        grid-area: header;
+    }
+    .menu {
+        background-color: $menu-color;
+        grid-area: menu;
+    }
+
+    .content {
+        grid-area: content;
+    }
+
+    .chat {
+        background-color: $chat-color;
+        grid-area: chat;
     }
 }
