added plus icon in header

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,7 +4,11 @@ body {
 
 .icon {
   width: 15px;
-  height: 20px; }
+  height: 15px; }
+
+.icon-bg {
+  width: 25px;
+  height: 25px; }
 
 body {
   color: white;
