--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,9 +4,11 @@ body {
 
 .icon {
   width: 15px;
-  height: 15px; }
+  height: 15px;
+  cursor: pointer; }
 
 .icon-bg {
+  cursor: pointer;
   width: 25px;
   height: 25px; }
 
@@ -50,7 +52,9 @@ body {
       border-bottom: 1px solid white;
       color: white;
       width: 140px; }
-      .container .search input :hover, .container .search input :active, .container .search input :focus {
+      .container .search input :hover,
+      .container .search input :active,
+      .container .search input :focus {
         outline: none; }
     .container .search ::-webkit-input-placeholder {
       color: white;
@@ -67,12 +71,24 @@ body {
     .container .search .icon {
       position: relative;
       top: -5px;
-      left: -15px;
-      cursor: pointer; }
+      left: -15px; }
   .container .nav-menu {
     flex-grow: 1;
     justify-content: flex-end; }
+    .container .nav-menu .icon {
+      width: 20px;
+      height: 20px; }
+    .container .nav-menu .icon-container {
+      border-radius: 50%;
+      border-color: white;
+      border-style: solid;
+      border-width: 1px;
+      width: 35px;
+      height: 35px;
+      margin-right: 30px;
+      cursor: pointer; }
   .container .add-new {
+    cursor: pointer;
     background-color: #E76048;
     width: 85px; }
 
