left side menu layout added

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,5 @@
 body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: white;
   background: linear-gradient(90deg, #020024 0%, #090979 56%, #00d4ff 81%); }
 
@@ -27,23 +28,31 @@ body {
   display: grid;
   grid-template-areas: "header header header" "menu content chat";
   grid-template-rows: 85px 1fr;
-  grid-template-columns: 12% 1fr 20%;
+  grid-template-columns: 200px 1fr 225px;
   min-height: 100vh; }
   .container .header {
     display: flex;
-    background-color: #151D20;
+    background-color: #151d20;
     grid-area: header; }
   .container .menu {
-    background-color: #1F282D;
-    grid-area: menu; }
+    background-color: #1f282d;
+    grid-area: menu;
+    padding: 5px 0; }
+    .container .menu .heading {
+      height: 40px;
+      color: #75838c;
+      text-transform: uppercase;
+      padding: 20px 30px;
+      font-size: 12px;
+      font-family: sans-serif; }
   .container .content {
     grid-area: content;
     background-color: white; }
   .container .chat {
-    background-color: #EAEDF1;
+    background-color: #eaedf1;
     grid-area: chat; }
   .container .search {
-    background-color: #2FB398;
+    background-color: #2fb398;
     width: 200px; }
     .container .search input {
       border: none;
@@ -90,18 +99,42 @@ body {
       position: relative; }
   .container .add-new {
     cursor: pointer;
-    background-color: #E76048;
+    background-color: #e76048;
     width: 85px; }
   .container .badge {
     position: absolute;
     top: -5px;
     right: -4px;
-    background-color: #2FB398;
+    background-color: #2fb398;
     z-index: 1000;
     width: 15px;
     height: 15px;
     border-radius: 50%;
     font-size: 70%;
     font-weight: bold; }
+
+.list-item {
+  padding: 0 30px;
+  height: 42px;
+  justify-content: flex-start;
+  cursor: pointer;
+  color: #ffffffb5; }
+  .list-item img {
+    margin-right: 10px; }
+  .list-item:hover {
+    background-color: #2f373c; }
+  .list-item:nth-of-type(1n) .colored-circle {
+    border-color: yellow; }
+  .list-item:nth-of-type(2n) .colored-circle {
+    border-color: #e76048; }
+  .list-item:nth-of-type(3n) .colored-circle {
+    border-color: #2fb398; }
+
+.colored-circle {
+  width: 15px;
+  height: 15px;
+  border: 2px solid;
+  border-radius: 50%;
+  margin-right: 10px; }
 
 /*# sourceMappingURL=index.css.map */
