--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -1,11 +1,21 @@
-$header-color:#151D20;
-$orange-color: #E76048;
-$green-color: #2FB398;
-$menu-color: #1F282D;
-$chat-color: #EAEDF1;
-
+// fonts
+$menu-heading-font: sans-serif;
+$base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+// colors
+$header-color: #151d20;
+$orange-color: #e76048;
+$green-color: #2fb398;
+$menu-color: #1f282d;
+$chat-color: #eaedf1;
 
 body {
-    color: white;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 56%, rgba(0,212,255,1) 81%);
+  font-family: $base-font;
+  color: white;
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 56%,
+    rgba(0, 212, 255, 1) 81%
+  );
 }
