--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,5 +1,7 @@
 @import "base";
 @import "utils";
+@import "chat";
+@import "menu";
 
 body {
   color: white;
@@ -11,13 +13,6 @@ body {
   );
 }
 
-// general utilities
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .container {
   margin: auto;
   max-width: 1254px;
@@ -26,26 +21,18 @@ body {
     "header header header"
     "menu content chat";
   grid-template-rows: 85px 1fr;
-  grid-template-columns: 200px 1fr 225px;
+  grid-template-columns: 200px minmax(300px, 1fr) 225px;
   min-height: 100vh;
 
   .header {
     display: flex;
     background-color: $header-color;
     grid-area: header;
-  }
-  .menu {
-    background-color: $menu-color;
-    grid-area: menu;
-    padding: 5px 0;
-
-    .heading {
-      height: 40px;
-      color: #75838c;
-      text-transform: uppercase;
-      padding: 20px 30px;
-      font-size: 12px;
-      font-family: $menu-heading-font;
+    .search {
+      background-color: $green-color;
+      color: white;
+      border-color: white;
+      width: 200px;
     }
   }
 
@@ -54,39 +41,6 @@ body {
     background-color: white;
   }
 
-  .chat {
-    background-color: $chat-color;
-    grid-area: chat;
-  }
-
-  .search {
-    background-color: $green-color;
-    width: 200px;
-
-    input {
-      border: none;
-      outline: none;
-      background-color: transparent;
-      border-bottom: 1px solid white;
-      color: white;
-      width: 140px;
-      :hover,
-      :active,
-      :focus {
-        outline: none;
-      }
-    }
-    @include placeholder {
-      color: white;
-      font-style: italic;
-    }
-
-    .icon {
-      position: relative;
-      top: -5px;
-      left: -15px;
-    }
-  }
   .nav-menu {
     flex-grow: 1;
     justify-content: flex-end;
@@ -113,57 +67,4 @@ body {
     background-color: $orange-color;
     width: 85px;
   }
-
-  .badge {
-    position: absolute;
-    top: -5px;
-    right: -4px;
-    background-color: $green-color;
-    z-index: 1000;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    font-size: 70%;
-    font-weight: bold;
-  }
-}
-
-.list-item {
-  padding: 0 30px;
-  height: 42px;
-  justify-content: flex-start;
-  cursor: pointer;
-  color: #ffffffb5;
-  img {
-    margin-right: 10px;
-  }
-  &:hover {
-    background-color: #2f373c;
-  }
-
-  &:nth-of-type(1n) {
-    .colored-circle {
-      border-color: yellow;
-    }
-  }
-
-  &:nth-of-type(2n) {
-    .colored-circle {
-      border-color: $orange-color;
-    }
-  }
-
-  &:nth-of-type(3n) {
-    .colored-circle {
-      border-color: $green-color;
-    }
-  }
-}
-
-.colored-circle {
-  width: 15px;
-  height: 15px;
-  border: 2px solid;
-  border-radius: 50%;
-  margin-right: 10px;
 }
