--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -38,15 +38,13 @@ body {
   margin-right: 10px; }
 
 .search {
-  width: 100%;
   background-color: inherit; }
   .search input {
     border: none;
     outline: none;
     background-color: transparent;
     border-bottom: 1px solid currentColor;
-    color: inherit;
-    width: 140px; }
+    color: inherit; }
     .search input :hover,
     .search input :active,
     .search input :focus {
@@ -69,12 +67,50 @@ body {
     left: -15px; }
 
 .chat {
+  max-height: calc(100vh - 85px);
+  overflow: auto;
   background-color: #eaedf1;
   grid-area: chat;
-  padding: 30px; }
+  padding: 30px;
+  color: #788390; }
   .chat .search {
     color: #b5bcc5;
     border-color: #b5bcc5; }
+  .chat .heading {
+    color: #595a5d;
+    margin: 20px 0px;
+    justify-content: flex-end;
+    text-transform: uppercase;
+    font-size: 14px; }
+    .chat .heading span {
+      margin-right: 10px; }
+  .chat .chat-item {
+    padding: 10px 0px;
+    cursor: pointer; }
+    .chat .chat-item:nth-of-type(1n) .online {
+      background-color: orange; }
+    .chat .chat-item:nth-of-type(2n) .online {
+      background-color: #e76048; }
+    .chat .chat-item:nth-of-type(3n) .online {
+      background-color: #2fb398; }
+  .chat .avatar {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    margin-right: 10px; }
+  .chat .name {
+    flex-grow: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 15px; }
+  .chat .indicator {
+    flex-shrink: 0;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%; }
+  .chat .offline {
+    background-color: #bbb7b7; }
 
 .menu {
   background-color: #1f282d;
@@ -125,6 +161,8 @@ body {
       color: white;
       border-color: white;
       width: 200px; }
+      .container .header .search input {
+        width: 140px; }
   .container .content {
     grid-area: content;
     background-color: white; }
