--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -33,6 +33,9 @@ body {
       color: white;
       border-color: white;
       width: 200px;
+      input {
+        width: 140px;
+      }
     }
   }
 
