--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -1,18 +1,20 @@
 /*
 Error: Undefined variable: "$chat-color".
-        on line 3 of ./assets/css/chat.scss
+        on line 5 of ./assets/css/chat.scss
 
 1: // chat css
 2: .chat {
-3:   background-color: $chat-color;
-4:   grid-area: chat;
-5:   padding: 30px;
-6: 
-7:   .search {
-8:     color: #b5bcc5;
+3:   max-height: calc(100vh - 85px);
+4:   overflow: auto;
+5:   background-color: $chat-color;
+6:   grid-area: chat;
+7:   padding: 30px;
+8:   color: #788390;
+9: 
+10:   .search {
 
 Backtrace:
-./assets/css/chat.scss:3
+./assets/css/chat.scss:5
 /Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/script/tree/node.rb:50:in `perform'
 /Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:398:in `visit_prop'
@@ -66,4 +68,4 @@ Backtrace:
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$chat-color\".\A         on line 3 of ./assets/css/chat.scss\A \A 1: // chat css\A 2: .chat {\A 3:   background-color: $chat-color;\A 4:   grid-area: chat;\A 5:   padding: 30px;\A 6: \A 7:   .search {\A 8:     color: #b5bcc5;"; }
+  content: "Error: Undefined variable: \"$chat-color\".\A         on line 5 of ./assets/css/chat.scss\A \A 1: // chat css\A 2: .chat {\A 3:   max-height: calc(100vh - 85px);\A 4:   overflow: auto;\A 5:   background-color: $chat-color;\A 6:   grid-area: chat;\A 7:   padding: 30px;\A 8:   color: #788390;\A 9: \A 10:   .search {"; }
