--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -51,16 +51,17 @@ Backtrace:
 /Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
 /Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `each'
 /Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:443:in `on_file_changed'
-/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:320:in `block in watch'
-/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/config.rb:23:in `call'
-/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:115:in `_process_changes'
-/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:19:in `block in loop_for'
-/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop'
-/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop_for'
-/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:84:in `_wait_for_changes'
-/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:42:in `block in setup'
-/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/internals/thread_pool.rb:6:in `block in add'
+/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:294:in `watch'
+/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/plugin.rb:109:in `method_missing'
+/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/exec/sass_scss.rb:358:in `watch_or_update'
+/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/exec/sass_scss.rb:51:in `process_result'
+/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/exec/base.rb:50:in `parse'
+/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/lib/sass/exec/base.rb:18:in `parse!'
+/Users/nagamanikantasatyanarayana/.rvm/rubies/ruby-2.4.7/lib/ruby/gems/2.4.0/gems/sass-3.7.4/bin/sass:13:in `<top (required)>'
+/Users/nagamanikantasatyanarayana/.rvm/gems/ruby-2.4.7@itildesk/bin/sass:23:in `load'
+/Users/nagamanikantasatyanarayana/.rvm/gems/ruby-2.4.7@itildesk/bin/sass:23:in `<main>'
+/Users/nagamanikantasatyanarayana/.rvm/gems/ruby-2.4.7@itildesk/bin/ruby_executable_hooks:24:in `eval'
+/Users/nagamanikantasatyanarayana/.rvm/gems/ruby-2.4.7@itildesk/bin/ruby_executable_hooks:24:in `<main>'
 */
 body:before {
   white-space: pre;
