--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,10 +13,25 @@ body {
   height: 15px;
   cursor: pointer; }
 
-.icon-bg {
+.icon-md {
+  width: 20px;
+  height: 20px;
+  cursor: pointer; }
+
+.icon-lg {
   cursor: pointer;
   width: 25px;
   height: 25px; }
+
+.btn {
+  background-color: #2fb398;
+  color: white;
+  outline: none;
+  border: none;
+  padding: 10px;
+  border-radius: 5px; }
+  .btn:hover {
+    background-color: #2da78e; }
 
 .badge {
   position: absolute;
@@ -140,6 +155,39 @@ body {
     .menu .list-item:nth-of-type(3n) .colored-circle {
       border-color: #2fb398; }
 
+.content {
+  color: gray;
+  max-height: calc(100vh - 85px);
+  overflow: auto;
+  grid-area: content;
+  background-color: white;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(auto, 1fr));
+  grid-auto-flow: row dense;
+  grid-gap: 20px; }
+  .content .box {
+    border-width: 1px;
+    border-color: #c3c6ca;
+    border-radius: 5px;
+    border-style: solid;
+    height: 500px; }
+  .content .create-post {
+    background-color: #eaedf1;
+    height: 140px; }
+    .content .create-post textarea {
+      margin: 2px;
+      padding: 15px 15px 0 15px;
+      border: none;
+      outline: none;
+      resize: none; }
+    .content .create-post .options img {
+      margin-right: 20px; }
+    .content .create-post .create-options {
+      display: flex;
+      justify-content: space-between;
+      padding: 15px 25px; }
+
 .container {
   margin: auto;
   max-width: 1254px;
@@ -159,9 +207,6 @@ body {
       width: 200px; }
       .container .header .search input {
         width: 140px; }
-  .container .content {
-    grid-area: content;
-    background-color: white; }
   .container .nav-menu {
     flex-grow: 1;
     justify-content: flex-end; }
